Fix text overflows on mobile

--- a/themes/default/css/custom.css
+++ b/themes/default/css/custom.css
@@ -216,6 +216,13 @@ br.inlist {
     display: none;
 }
 
+#isso-root .isso-text {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+}
+
 /* Knowledge base */
 
 .kb.container {
